--- a/MyApplication/app/src/main/res/layout/activity_game_lobby.xml
+++ b/MyApplication/app/src/main/res/layout/activity_game_lobby.xml
@@ -6,10 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".view.GameLobbyActivity">
 
-    <ListView
-        android:id="@+id/listView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="18dp" />
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/StartGameButton"
+            android:layout_width="match_parent"
+            android:layout_height="93dp"
+            android:text="Start Game" />
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
