--- a/MyApplication/app/src/main/res/layout/activity_voting_timeout.xml
+++ b/MyApplication/app/src/main/res/layout/activity_voting_timeout.xml
@@ -6,4 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".view.VotingTimeoutActivity">
 
+    <TextView
+        android:id="@+id/VoteTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="left" />
 </androidx.constraintlayout.widget.ConstraintLayout>
