--- a/MyApplication/app/src/main/res/layout/activity_game_session.xml
+++ b/MyApplication/app/src/main/res/layout/activity_game_session.xml
@@ -15,23 +15,19 @@
         app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="-168dp">
 
-        <Button
-            android:id="@+id/button4"
+        <TextView
+            android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
+            android:text="DAY"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <TextView
             android:id="@+id/TimerTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="00:00" />
+            android:text="00:00"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <ListView
             android:id="@+id/PlayerList"
