added instructions. mocking game room creation and player creation

--- a/MyApplication/app/src/main/res/layout/activity_game_lobby.xml
+++ b/MyApplication/app/src/main/res/layout/activity_game_lobby.xml
@@ -11,6 +11,18 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ID: 5589" />
+
+        <Button
+            android:id="@+id/ExitGameLobby"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Exit Game Lobby" />
+
         <Button
             android:id="@+id/StartGameButton"
             android:layout_width="match_parent"
