--- a/MyApplication/app/src/main/res/layout/activity_end_game_screen.xml
+++ b/MyApplication/app/src/main/res/layout/activity_end_game_screen.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".view.EndGameScreen">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="345dp">
+
+        <TextView
+            android:id="@+id/WhoWon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/colorAccent" />
+
+        <Button
+            android:id="@+id/ExitToMainMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Exit To Main Menu" />
+
+        <ListView
+            android:id="@+id/ListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </ListView>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
