--- a/MyApplication/app/src/main/res/layout/activity_voting_timeout.xml
+++ b/MyApplication/app/src/main/res/layout/activity_voting_timeout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/VoteTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="Calculating Votes..."
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
