--- a/MyApplication/app/src/main/res/layout/main_activity.xml
+++ b/MyApplication/app/src/main/res/layout/main_activity.xml
@@ -32,4 +32,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="216dp"
         android:text="Instructions" />
+
+    <Button
+        android:id="@+id/LeaveGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="151dp"
+        android:text="EXIT GAME" />
 </RelativeLayout>
